fix!: large width news feed image not work (!) BUG
Given a news feed image of thumbnail size with large width,
Then that image should not be shrunk less if space is available.

BUG: If on grid layout (e.g. narrow screen), 300 width image too narrow.

--- a/taccsite_cms/static/site_cms/css/src/_imports/tools/x-news.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/tools/x-news.css
@@ -158,7 +158,7 @@
     'media head'
     'media lead';
   /* To limit media width */
-  grid-template-columns: minmax(0, 300px) 1fr;
+  grid-template-columns: max-content 1fr;
   /* To give 'lead' remaining vert. space (removes gap between head and lead) */
   grid-template-rows: min-content 1fr;
 
